style/base.css
/* @override http://patternslib.com/style/base.css */

@import url("common.css");

@import url("../demo/checklist/checklist.css");

@font-face {
	font-family: "Perpetua bold italic";
	src: url("fonts/Perpetua Bold Italic.ttf")
}

body {
	max-width: 100%;
	padding: 0;
}

#main
 {
	width: 940px;
	overflow: hidden;
	position: relative;
}

/* @group News */

#news .introduction {
	float: left;
	width: 70%;
	margin-bottom: 30px;
}

#button-slides {
	float: right;
	font-size: 20px;
	color: #6a6a6a;
	padding: 10px 20px 10px 93px;
	border-radius: 4px;
	border-right: 1px solid #e1e1e1;
	border-left: 1px solid #e1e1e1;
	position: relative;
	cursor: pointer;
	user-select:none;
}

#button-slides:active {
	box-shadow: inset 0 1px 5px rgba(0,0,0,0.2)	
}

#button-slides:after {
	content: " ";
	width: 49px;
	height: 35px;
	display: inline-block;
	position: absolute;
	top: 5px;
	left: 35px;
	background-image: url(icon-slides.png);
}

#button-slides:before {
	position: absolute;
	left: 10px;
}



/* @end */

#content {
	clear: both;
	padding-right: 40px;
	padding-left: 40px;
	max-width: 960px;
	margin-right: auto;
	margin-left: auto;
}

#content section {
	clear: both;
	margin-bottom: 0;
	position: relative;
	/*background-image: url(texture-light-grain.png);*/
	padding: 30px 0 0;
}

#content > section:after {
	content: " ";
	clear: both;
	display: block;
	background: url(slith.png) no-repeat center bottom;
	width: 100%;
	height: 30px;
	background-size: 100% auto;
	margin-top: 30px;
}

/* @group Download form */

form#download {
	padding-top: 20px;
	margin-top: 0;
}

form#download:before {
	content: " ";
	background-image: -webkit-radial-gradient(50% 0%, ellipse farthest-corner, #ababab, #000000 100%);
	background-image: -moz-radial-gradient(50% 0%, ellipse farthest-corner, #ababab, #000000 100%);
	background-image: -webkit-radial-gradient(50% 0%, ellipse farthest-corner, #ababab, #000000 100%);
	position: absolute;
	top: 20px;
	right: 0;
	bottom: 0;
	left: 0;
}

#component-index {
	overflow: hidden;
	height: 0;
	padding-top: 0;
}

.component-index {
	padding-left: 0;
	padding-right: 0;
	color: silver;
	padding-top: 0;
	transition: all 1s;
	overflow: hidden;
	max-width: 970px;
	margin-right: auto;
	margin-left: auto;
	transition: all 1s;
	z-index: 0;
}

.component-index button {
	background-color: #595959;
	color: white;
	text-shadow: #000000 0px -1px 0px;
	border-color: #858585;
	background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.2) 0%, rgba(255,255,255,0.2) 100%);
	background-image: -moz-linear-gradient(bottom, rgba(0,0,0,0.2) 0%, rgba(255,255,255,0.2) 100%);
	background-image: linear-gradient(bottom, rgba(0,0,0,0.2) 0%, rgba(255,255,255,0.2) 100%);
}

.component-index .button-bar {
	border-style: none;
	padding-left: 15px;
	padding-right: 15px;
	transition: all 1s;
}

/* @group Form header */

.component-index .functions {
	float: right;
	margin-top: -43px;
	position: relative;
	margin-right: 28px;
}

.component-index .bundle-type {
	margin-left: 2%;
	margin-right: 2%;
	padding-left: 8px;
	border-style: none;
	display: inline-block;
}

.component-index .bundle-type label {
	display: inline-block;
	padding-left: 10px;
	padding-right: 10px;
}

.state-home .component-index .functions,
.state-home .component-index .bundle-type,
.state-documentation .component-index .functions,
.state-documentation .component-index .bundle-type  {
	opacity: 0;
}

/* @end */

.component-index h2 {
	clear: both;
	padding-left: 3%;
	font-size: 15px;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 2px;
	margin-bottom: 5px;
	overflow: hidden;
	color: silver;
	transition: all 1s;
	-webkit-transition: all 1s;
}

.state-home .component-index h2 {
	height: 0;
	margin: 0;
}

/* @group Labels */

.state-documentation .component-index .checklist label {
}

/* @end */

/* @group Label link */

.state-documentation .component-index .checklist label a {
	z-index: 0;
}

.state-download .component-index .checklist label a {
	left: 30px;
	z-index: -1;
}

/* @end */

.component-index .checklist {
	transition: margin-bottom 1s;
}

.state-home .component-index .checklist {
	margin-bottom: 0;
}

/* @group Component icon */

/* @end */

.component-index .checklist label input {
	display: none; /*temporary*/
}



/* @end */

/* @group Postit */
        
.postit {
	position: relative;    
    padding: 1em; 
    margin: 0 10px 40px; 
	background-color: #fdfdc8;
	color: #6f5a44;
    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.05) inset;
	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.05) inset;
	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.05) inset;
	display: block;
	border: 1px solid #e2e2e2;
}

.postit.pat-collapsible .panel-content {
	padding-bottom: 0;
}

.postit *:last-child {
	margin-bottom: 0;
}

.postit *:last-child:after {
	content: " ";
	clear: both;
	display: block;
}

.section-dashboard .postit.guide {
	background-color: rgba(0,0,0,0.77);
	border: 1px solid #414141;
	color: silver;
	background-image: none;
	padding-right: 1em;
}

.lt-ie9 .section-dashboard .postit.guide {
	background-color: #535353;
}

.section-dashboard .postit a {
	color: white;
	font-weight: bold;
}

.postit a,
aside.sidebar .postit a {
	color: #59676e;
	font-weight: bold;
}

        .postit:before,
        .postit:after {
            content:"";
            position:absolute; 
            z-index:-2;
        }

.postit.guide {
	display: none;
}

html.js .postit {
	display: block;
}

html.js .postit.guide.closed {
	display: none;
}

.postit.guide.pat-collapsible h3 {
	float: right;
	line-height: 22px;
	height: 16px;
	width: 16px;
	padding: 0;
	text-indent: -1000px;
	overflow: hidden;
	background: url(buttons-modal.png) center center;
	border-color: rgba(254,255,254,0.63);
	filter: none;
	border-radius: 4px;
	margin-top: 0;
	margin-bottom: 0;
	margin-left: 20px;
}

.postit img.inline
 {
	height: 1em;
	vertical-align: text-bottom;
}
/* ... */

